# FedENAS

./: .gitignore  Dockerfile  README.md  connect.sh  run.sh
FL-ENAS/: arch_1.pkl  client.py  main.py  server.py  test.txt
Proof-of-concept/: arch_2.pkl  archs.json  test.py
flwr-cifar10-basic/: README.md  pyproject.toml
flwr-cifar10-basic/flwr_cifar10_basic/: Training_time_custom.txt  Training_time_lenet.txt  Training_time_vgg19.txt  __init__.py  client_app.py  my_strategy.py  plot_results_json.py  results.json  results_custom.json  results_lenet.json  results_vgg19.json  server_app.py  task.py
flwr-cifar10-basic/flwr_cifar10_basic/logs/tensorboard/20250714-142224/: events.out.tfevents.1752502944.urano.16585.0.v2
flwr-cifar10-basic/flwr_cifar10_basic/logs/tensorboard/20250714-144722/: events.out.tfevents.1752504442.urano.32518.0.v2
flwr-cifar10-basic/flwr_cifar10_basic/logs/tensorboard/20250714-145004/: events.out.tfevents.1752504604.urano.1472.0.v2
flwr-cifar10-basic/flwr_cifar10_basic/logs/tensorboard/20250714-145545/: events.out.tfevents.1752504945.urano.6060.0.v2
flwr-cifar10-enas/: README.md  pyproject.toml
flwr-cifar10-enas/flwr_cifar10_enas/: Training_time.txt  __init__.py  client_0_controller_weights.pkl  client_1_controller_weights.pkl  client_2_controller_weights.pkl  client_3_controller_weights.pkl  client_app.py  my_strategy.py  plot_fl-enas_arch.py  plot_results_json.py  results.json  server_app.py  task.py
flwr-cifar10-enas/flwr_cifar10_enas/src/: common_ops.py  controller.py  framework.py  utils.py
flwr-cifar10-enas/flwr_cifar10_enas/src/cifar10/: child.py  image_ops.py  macro_child.py  macro_controller.py  micro_child.py  micro_controller.py
(+32 files in other folders)
