[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-cifar10-basic"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.11.1,<2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Tamai"

[tool.flwr.app.components]
serverapp = "flwr_cifar10_basic.server_app:app"
clientapp = "flwr_cifar10_basic.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
local-epochs = 310
batch-size = 128
verbose = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2

[tool.flwr.federations.local-deployment]
address = "0.0.0.0:9096"
insecure = true