[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-cifar10-enas"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.11.1,<2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Tamai"

[tool.flwr.app.components]
serverapp = "flwr_cifar10_enas.server_app:app"
clientapp = "flwr_cifar10_enas.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
local-epochs = 5
batch-size = 32
verbose = true

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2
